prometheus/deploy-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-prometheus-deployment    
  namespace: monitoring
  labels:
    app: monitoring  
spec:
  replicas: 1
  selector:
    matchLabels:
      key: monitoring-prometheus-pod
  template:
    metadata:
      labels:
        key: monitoring-prometheus-pod
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus-container
        image: prom/prometheus
        volumeMounts:
          - name: config-volume
            mountPath: /etc/prometheus/prometheus.yml
            subPath: prometheus.yml
        ports:
        - containerPort: 9090
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-monitoring-cm
