prometheus/route-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-site  
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.cluster.com`) 
    kind: Rule
    services:
    - name: prometheus-monitoring-service
      port: 48100
